# for_21

./: CMakeLists.txt  builtin_fd.c  eject_redirect.c  env_list.c  environ.c  execute.c  free.c  get_cmd.c  main.c  parse_tokens.c  pipe.c  semantica.c  sh.h  token.c  tree.c  tree_ft.c
builtin/: cd.c
cmd/: get_cmd.c
exec/: builtin_fd.c  execute.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_delarr.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printarr.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  (+11 more)
msh/: exec.c  init.c  main.c  minishell.h
tokens/: ampersand.c  eject_redirect.c  flag.c  parse_tokens.c  semantica.c  token.c
utils/: init.c
